# snowflake_cortex_ai_proxy

./: .gitignore  README.md  cortex-proxy.example.toml  install.bat  install.sh  pixi.toml
cortex-proxy-gui/: Cargo.toml  gui-config.toml
cortex-proxy-gui/macos-app/CortexProxy.app/Contents/: Info.plist
cortex-proxy-gui/src/: main.rs
cortex-proxy-rs/: Cargo.toml
cortex-proxy-rs/src/: main.rs
